Open positions button alignment fixed

--- a/careers.css
+++ b/careers.css
@@ -28,7 +28,6 @@ body {
         }
         
         .open_positions {
-            margin-left: 10%;
             margin-bottom: 2%;
         }
         
